--- a/unittype.html
+++ b/unittype.html
@@ -13,7 +13,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/home.css" rel="stylesheet">
+    <link href="css/unittype.css" rel="stylesheet">
 
     <!-- jQuery core JavaScript -->
     <script type="text/javascript" src="js/jquery-1.10.2.js"></script>
@@ -72,22 +72,20 @@
 
     <div class="container">
       <ol class="breadcrumb">
-        <li class="active">Curación de Metas</li>
+        <li><a>Curación de Metas</a></li>
+        <li>Corte de Apelaciones</li>
       </ol>
+      <div class="panel panel-info">
 
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">Poder Judicial</h3>
-        </div>
         <div class="table-responsive">
-          <table class="table table-hover table-condensed table-bordered">
+          <table class="table table-hover table-condensed">
             <thead>
               <tr>
                 <th>Código</th>
-                <th>Tipo de Unidad</th>
-                <th>Nº de Unidades</th>
+                <th>Unidad</th>
+                <th>% Cump.</th>
                 <th>Nº de Metas</th>
-                <th>Nº de Metas Reportadas</th>
+                <th>Nº de Metas Informadas</th>
                 <th>Nº de Metas Cumplidas</th>
                 <th>Nº de Metas Revisadas</th>
                 <th>Nº Observaciones</th>
@@ -97,72 +95,36 @@
             <tbody>
               <tr>
                 <td>1</td>
-                <td>Corte Suprema</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
+                <td>Arica</td>
+                <td>100%</td>
+                <td>4</td>
+                <td>4</td>
+                <td>4</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
-              <tr>
+              <tr class="">
                 <td>2</td>
-                <td><a href="unittype.html">Corte de Apelaciones</a></td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
+                <td>Iquique</td>
+                <td>75%</td>
+                <td>4</td>
+                <td>4</td>
+                <td>4</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">Corporación Adminsitrativa del Poder Judicial</h3>
-        </div>
-        <div class="table-responsive">
-          <table class="table table-hover table-condensed table-bordered">
-            <thead>
-              <tr>
-                <th>Código</th>
-                <th>Tipo de Unidad</th>
-                <th>Nº de Unidades</th>
-                <th>Nº de Metas</th>
-                <th>Nº de Metas Reportadas</th>
-                <th>Nº de Metas Cumplidas</th>
-                <th>Nº de Metas Validadas</th>
-                <th>Nº Errores u Observaciones</th>
-                <th>Estado</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>Dirección</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Asesoria Juridica</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
-                <td>Table cell</td>
+              <tr class="danger">
+                <td>3</td>
+                <td><a href="unit.html">Copiapo</a></td>
+                <td>30%</td>
+                <td>4</td>
+                <td>4</td>
+                <td>0</td>
+                <td>3</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
             </tbody>
           </table>
