--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     <!-- jQuery core JavaScript -->
     <script type="text/javascript" src="js/jquery-1.10.2.js"></script>
-    
+
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="js/bootstrap.js"></script>
-    
+
     <meta content="clickberry-extension-here"><style type="text/css"></style>
   </head>
   <body>
@@ -30,7 +30,7 @@
           <a class="navbar-brand" href="home.html">SCAPJ</a>
         </div>
       </div>
-    </div>    
+    </div>
 
     <div class="container">
       <form class="form-signin">
@@ -38,11 +38,10 @@
         <input type="text" class="form-control" placeholder="Usuario" required="" autofocus="">
         <input type="password" class="form-control" placeholder="Password" required="">
         <label class="checkbox">
-          <input type="checkbox" value="remember-me"> Remember me
+          <input type="checkbox" value="remember-me"> Recordarme
         </label>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
       </form>
-
     </div> <!-- /container -->
 
 
