--- a/goal.html
+++ b/goal.html
@@ -94,34 +94,34 @@
                 <tr>
                   <td>
                     <p>
-                      <b>Nivel de Supervisión:</b><br>Presidente de Corte
+                      <b>Nivel de Supervisión:</b><br />Presidente de Corte
                     </p>
                   </td>
                   <td>
                     <p>
-                      <b>Cargo Global de Trabajo:</b><br>1.000 Causas/mes
+                      <b>Cargo Global de Trabajo:</b><br />1.000 Causas/mes
                     </p>
                   </td>
                   <td>
                     <p>
-                      <b>Población Atendida:</b><br>15.000 Habitantes
+                      <b>Población Atendida:</b><br />15.000 Habitantes
                     </p>
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <p>
-                      <b>Ubicación Geográfica:</b><br>Copiapó
+                      <b>Ubicación Geográfica:</b><br />Copiapó
                     </p>
                   </td>
                   <td>
                     <p>
-                      <b>Personal Disponible:</b><br>80
+                      <b>Personal Disponible:</b><br />80
                     </p>
                   </td>
                   <td>
                     <p>
-                      <b>M2 Disponibles por Unidad:</b><br>1200 M2
+                      <b>M2 Disponibles por Unidad:</b><br />1200 M2
                     </p>
                   </td>
                 </tr>
@@ -206,16 +206,28 @@
         </div>
         <div id="collapseDetail" class="panel-collapse collapse in">
           <div class="panel-body">
-            <div class="row">
-              <div class="col-md-5">
-                <p><b>Identificador:</b> Cumplimiento de Programa</p>
-              </div>
-              <div class="col-md-4 ">
-                <p><b>Ponderador:</b> 30%</p>
-              </div>
-              <div class="col-md-3">
-                <p><b>Meta: </b>100%</p>
-              </div>
+            <div class="table-responsive">
+              <table class="table table-info">
+                <tbody>
+                  <tr>
+                    <td>
+                      <p>
+                        <b>Identificador: </b>Cumplimiento de Programa
+                      </p>
+                    </td>
+                    <td>
+                      <p>
+                        <b>Ponderador: </b>100%
+                      </p>
+                    </td>
+                    <td>
+                      <p>
+                        <b>Meta: </b>100%
+                      </p>
+                    </td>
+                  </tr>
+                 </tbody>
+              </table>
             </div>
 
             <h4>Definición del Objetivo:</h4>
