--- a/unit.html
+++ b/unit.html
@@ -93,34 +93,34 @@
                 <tr>
                   <td>
                     <p>
-                      <b>Nivel de Supervisión:</b><br>Presidente de Corte
+                      <b>Nivel de Supervisión:</b><br />Presidente de Corte
                     </p>
                   </td>
                   <td>
                     <p>
-                      <b>Cargo Global de Trabajo:</b><br>1.000 Causas/mes
+                      <b>Cargo Global de Trabajo:</b><br />1.000 Causas/mes
                     </p>
                   </td>
                   <td>
                     <p>
-                      <b>Población Atendida:</b><br>15.000 Habitantes
+                      <b>Población Atendida:</b><br />15.000 Habitantes
                     </p>
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <p>
-                      <b>Ubicación Geográfica:</b><br>Copiapó
+                      <b>Ubicación Geográfica:</b><br />Copiapó
                     </p>
                   </td>
                   <td>
                     <p>
-                      <b>Personal Disponible:</b><br>80
+                      <b>Personal Disponible:</b><br />80
                     </p>
                   </td>
                   <td>
                     <p>
-                      <b>M2 Disponibles por Unidad:</b><br>1200 M2
+                      <b>M2 Disponibles por Unidad:</b><br />1200 M2
                     </p>
                   </td>
                 </tr>
