--- a/home.html
+++ b/home.html
@@ -84,20 +84,22 @@
             <thead>
               <tr>
                 <th>Código</th>
-                <th>Tipo de Unidad</th>
-                <th>Nº de Unidades</th>
-                <th>Nº de Metas</th>
-                <th>Nº de Metas Reportadas</th>
-                <th>Nº de Metas Cumplidas</th>
-                <th>Nº de Metas Revisadas</th>
-                <th>Nº Observaciones</th>
+                <th class="txt-left">Tipo de Unidad</th>
+                <th>Nº Unidades</th>
+                <th>Nº Metas / Unidad</th>
+                <th>Nº Metas</th>
+                <th>Nº Metas Informadas</th>
+                <th>Nº Metas Cumplidas</th>
+                <th>Nº Metas Revisadas</th>
+                <th>Nº Obser.</th>
                 <th>Estado</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>1</td>
-                <td>Corte Suprema</td>
+                <td>Corte Suprema asdfas asdfasf </td>
+                <td>Table cell</td>
                 <td>Table cell</td>
                 <td>Table cell</td>
                 <td>Table cell</td>
@@ -109,6 +111,7 @@
               <tr>
                 <td>2</td>
                 <td><a href="unittype.html">Corte de Apelaciones</a></td>
+                <td>Table cell</td>
                 <td>Table cell</td>
                 <td>Table cell</td>
                 <td>Table cell</td>
@@ -133,11 +136,12 @@
                 <th>Código</th>
                 <th>Tipo de Unidad</th>
                 <th>Nº de Unidades</th>
+                <th>Nº de Metas por Unidad</th>
                 <th>Nº de Metas</th>
-                <th>Nº de Metas Reportadas</th>
+                <th>Nº de Metas Informadas</th>
                 <th>Nº de Metas Cumplidas</th>
-                <th>Nº de Metas Validadas</th>
-                <th>Nº Errores u Observaciones</th>
+                <th>Nº de Metas Revisadas</th>
+                <th>Nº Observaciones</th>
                 <th>Estado</th>
               </tr>
             </thead>
@@ -152,10 +156,12 @@
                 <td>Table cell</td>
                 <td>Table cell</td>
                 <td>Table cell</td>
+                <td>Table cell</td>
               </tr>
               <tr>
                 <td>2</td>
                 <td>Asesoria Juridica</td>
+                <td>Table cell</td>
                 <td>Table cell</td>
                 <td>Table cell</td>
                 <td>Table cell</td>
