--- a/unit.html
+++ b/unit.html
@@ -13,7 +13,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/unittype.css" rel="stylesheet">
+    <link href="css/home.css" rel="stylesheet">
 
     <!-- jQuery core JavaScript -->
     <script type="text/javascript" src="js/jquery-1.10.2.js"></script>
@@ -72,8 +72,9 @@
 
     <div class="container">
       <ol class="breadcrumb">
-        <li><a>Curación de Metas</a></li>
-        <li>Corte de Apelaciones</li>
+        <li><a href="home.html">Curación de Metas</a></li>
+        <li><a href="unittype.html">Corte de Apelaciones</a></li>
+        <li>Copiapó</li>
       </ol>
 
       <div class="panel panel-default">
@@ -93,17 +94,17 @@
                 <tr>
                   <td>
                     <p>
-                      <b>Nivel de Supervisión:</b><br />Presidente de Corte
-                    </p>
-                  </td>
-                  <td>
-                    <p>
                       <b>Cargo Global de Trabajo:</b><br />1.000 Causas/mes
                     </p>
                   </td>
                   <td>
                     <p>
                       <b>Población Atendida:</b><br />15.000 Habitantes
+                    </p>
+                  </td>
+                  <td>
+                    <p>
+                      <b>M2 Disponibles por Unidad:</b><br />1200 M2
                     </p>
                   </td>
                 </tr>
@@ -118,11 +119,7 @@
                       <b>Personal Disponible:</b><br />80
                     </p>
                   </td>
-                  <td>
-                    <p>
-                      <b>M2 Disponibles por Unidad:</b><br />1200 M2
-                    </p>
-                  </td>
+                  <td></td> <!-- only aesthetic -->
                 </tr>
                </tbody>
             </table>
@@ -143,8 +140,8 @@
               <th>Objetivo</th>
               <th>Cumple</th>
               <th>Metas Informadas</th>
-              <th>Metas revisadas</th>
-              <th>Recamaciones</th>
+              <th>Metas Validadas</th>
+              <th>Requerimientos Pendientes</th>
               <th>Nº Observaciones</th>
               <th>Revisado</th>
               <th>Estado</th>
@@ -179,7 +176,7 @@
               <td>SI</td>
               <td>rojo</td>
             </tr>
-            <tr class="danger">
+            <tr>
               <td>3</td>
               <td>Causas en estado de ser vistas</td>
               <td>Colectiva</td>
