--- a/unittype.html
+++ b/unittype.html
@@ -14,7 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/unittype.css" rel="stylesheet">
-
+    <link href="css/home.css" rel="stylesheet">
     <!-- jQuery core JavaScript -->
     <script type="text/javascript" src="js/jquery-1.10.2.js"></script>
 
@@ -72,7 +72,7 @@
 
     <div class="container">
       <ol class="breadcrumb">
-        <li><a>Curación de Metas</a></li>
+        <li><a href="home.html">Curación de Metas</a></li>
         <li>Corte de Apelaciones</li>
       </ol>
       <div class="panel panel-info">
