--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-
+    <link href="css/home.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/signin.css" rel="stylesheet">
 
@@ -40,7 +40,7 @@
         <label class="checkbox">
           <input type="checkbox" value="remember-me"> Recordarme
         </label>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+        <a href="home.html" class="btn btn-lg btn-primary btn-block" type="submit">Entrar</a>
       </form>
     </div> <!-- /container -->
 
